<resources>
    <string name="app_name">BookInventory2</string>
    <string name="addABook">It\'s Empty. Add a book :)</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All</string>
    <string name="bookName">Book Name (required)</string>
    <string name="bookPrice">Book Price (required)</string>
    <string name="bookQuantity">Book Quantity (required)</string>
    <string name="increase_quantity">+ Quantity</string>
    <string name="decrease_quantity">- Quantity</string>
    <string name="book_supplier_name">Supplier Name (required)</string>
    <string name="book_supplier_phone">Supplier Phone (required)</string>
    <string name="order_from_supplier_button">Order</string>
    <string name="delete">Delete Book</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="no_empty">Please apply everything.</string>
    <string name="error">Error</string>
    <string name="saved">Saved</string>
    <string name="updated">Updated</string>
    <string name="done">Done</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_book">Delete book?</string>
    <string name="cancel">Cancel</string>
    <string name="zero_quantity">Quantity is zero.</string>
</resources>
